--- a/logo-order.html
+++ b/logo-order.html
@@ -1,251 +1,252 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-    <title>2B-studios | Agentie de Web Design</title>
-    <!-- script -->
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="js/typed.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/smooth-scroll.js"></script>
-    <script src="js/bootstrap.main.js"></script>
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="css/default.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
-    <link rel='icon' href='images/favicon.ico' >
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+<!DOCTYPE html>
+<html lang="en">
 
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="favicon.ico">
+  <title>2B-studios | Agentie de Web Design</title>
+  <!-- script -->
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="js/typed.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/smooth-scroll.js"></script>
+  <script src="js/bootstrap.main.js"></script>
+  <!-- Bootstrap core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/default.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
+  <link rel='icon' href='images/favicon.ico'>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
-  <body>
-      <div class="container-top change-top">
-      <div class="top-wrap">
-        <div class="custom-container">
-          <div class="logo">
-            <a href="index.html">
+</head>
+
+<body>
+  <div class="container-top change-top">
+    <div class="top-wrap">
+      <div class="custom-container">
+        <div class="logo">
+          <a href="index.html">
               <img src="images/logo.png" alt="" class="initial-logo">
               <img src="images/logo-nav.png" alt="" class="scrolled-logo">
             </a>
-          </div>
-          <div id="main_nav">
-            <div id="nav">
-              <nav class="navbar navbar-default navbar-inverse">
-                <div class="container-fluid">
-                  <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#content_section_b" aria-expanded="false">
+        </div>
+        <div id="main_nav">
+          <div id="nav">
+            <nav class="navbar navbar-default navbar-inverse">
+              <div class="container-fluid">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#content_section_b" aria-expanded="false">
                       <span class="sr-only">Toggle navigation</span>
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                  </div>
-                  <div id="content_section_b" class="collapse navbar-collapse">
-                    <ul id="nav" class="dropdown nav navbar-nav">
-                      <li class="">
-                        <a href="about-us.html">Despre Noi</a>
-                      </li>
-                      <li class="">
-                        <a href="portfolio.html">Portofoliu</a>
-                      </li>
-                      <li class="">
-                        <a href="#contact-us">Contact</a>
-                      </li>
-                      <li>
-                        <a class="special-btn" href="order.html">Comanda</a>
-                      </li>
-                    </ul>
-                  </div>
                 </div>
-              </nav>
-            </div>
+                <div id="content_section_b" class="collapse navbar-collapse">
+                  <ul id="nav" class="dropdown nav navbar-nav">
+                    <li class="">
+                      <a href="about-us.html">Despre Noi</a>
+                    </li>
+                    <li class="">
+                      <a href="portfolio.html">Portofoliu</a>
+                    </li>
+                    <li class="">
+                      <a href="#contact-us">Contact</a>
+                    </li>
+                    <li>
+                      <a class="special-btn" href="order.html">Comanda</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Order Section -->
+  <!-- Order Section -->
 
-    <div class="custom-container pad">
-      <div class="order-wrapper">
+  <div class="custom-container pad">
+    <div class="order-wrapper">
 
-        <!-- Order - Title+Subtitle -->
-        <h1>Mai avem nevoie de câteva informatii</h1>
-        <h6 class="order-name">Logo Design</h6>
-        <form action="https://script.google.com/macros/s/AKfycbym8m3AGk65NsHUD0W2b4LX-kl_FA74mk1JNpkYBg/exec" method="POST" id="gform" class="order-form">
+      <!-- Order - Title+Subtitle -->
+      <h1>Mai avem nevoie de câteva detalii</h1>
+      <h6 class="order-name">Logo Design</h6>
+      <form action="https://script.google.com/macros/s/AKfycbym8m3AGk65NsHUD0W2b4LX-kl_FA74mk1JNpkYBg/exec" method="POST" id="gform" class="order-form">
 
-          <!-- Order - 1st Section -->
-          <div class="step first-section active-section">
+        <!-- Order - 1st Section -->
+        <div class="step first-section active-section">
 
-            <div id="step-title">
-              <span class="blue">Pasul 1:</span>
-              <b>Date Personale</b>
-            </div>
-
-            <!-- Order - inputs -->
-            <div class="data">
-              <h6>Nume Complet:</h6>
-              <input type="text" name="name" value="" placeholder="e.g Popescu Ioan" class="inp">
-
-              <h6>Email*</h6>
-              <input type="text" name="email" value="" placeholder="nume@gmail.com"  class="inp">
-
-              <h6>Telefon</h6>
-              <input type="text" name="" value="" class="inp">
-
-              <div id="check"><input type="checkbox" name="" value=""> Am verificat ca toate datele sa fie introduse corect</div>
-
-            </div>
-            <div class="row step-buttons">
-              <div class="col-md-6">
-                <a href="">Inapoi</a>
-              </div>
-              <div class="col-md-6 right">
-                <a href="" class="order-btn next-step">Urmatorul Pas</a>
-              </div>
-            </div>
-
-
-
+          <div id="step-title">
+            <span class="blue">Pasul 1:</span>
+            <b>Date Personale</b>
           </div>
 
-          <!-- Order - 2nd Section -->
-          <div class="step second-section">
+          <!-- Order - inputs -->
+          <div class="data">
+            <h6>Nume Complet:</h6>
+            <input type="text" name="name" value="" placeholder="e.g Popescu Ioan" class="inp">
 
-            <div id="step-title">
-              <span class="blue">Pasul 2:</span>
-              <b>Informatii Logo</b>
+            <h6>Email*</h6>
+            <input type="text" name="email" value="" placeholder="nume@gmail.com" class="inp">
+
+            <h6>Telefon</h6>
+            <input type="text" name="" value="" class="inp">
+
+            <div id="check"><input type="checkbox" name="" value=""> Am verificat ca toate datele sa fie introduse corect</div>
+
+          </div>
+          <div class="row step-buttons">
+            <div class="col-md-6">
+              <a href="">Inapoi</a>
             </div>
-<div class="data">
+            <div class="col-md-6 right">
+              <a href="" class="order-btn next-step">Urmatorul Pas</a>
+            </div>
+          </div>
+
+
+
+        </div>
+
+        <!-- Order - 2nd Section -->
+        <div class="step second-section">
+
+          <div id="step-title">
+            <span class="blue">Pasul 2:</span>
+            <b>Informatii Logo</b>
+          </div>
+          <div class="data">
             <div class="logo-info">
               <h6>Numele care sa apara in logo*</h6>
               <input type="text" name="name" value="" placeholder="e.g Logo Company" class="inp">
 
               <h6>Slogan (daca exista)</h6>
-              <input type="text" name="email" value="" placeholder="e.g slogan"  class="inp">
+              <input type="text" name="email" value="" placeholder="e.g slogan" class="inp">
 
               <h6>Informatii despre compania ta</h6>
               <textarea name="message"></textarea>
             </div>
+          </div>
+          <div class="row step-buttons">
+            <div class="col-md-6">
+
             </div>
-            <div class="row step-buttons">
-              <div class="col-md-6">
-
-              </div>
-              <div class="col-md-6 right">
-                <a href="" class="order-btn next-step">Urmatorul Pas</a>
-              </div>
+            <div class="col-md-6 right">
+              <a href="" class="order-btn next-step">Urmatorul Pas</a>
             </div>
-
-
           </div>
 
-          <!-- Order - 3rd Section -->
-          <div class="step third-section">
 
-            <div id="step-title">
-              <span class="blue">Pasul 3:</span>
-              <b>Aspect Logo</b>
-            </div>
-<div class="data">
+        </div>
+
+        <!-- Order - 3rd Section -->
+        <div class="step third-section">
+
+          <div id="step-title">
+            <span class="blue">Pasul 3:</span>
+            <b>Aspect Logo</b>
+          </div>
+          <div class="data">
             <div class="logo-info">
               <h6>Culori</h6>
               <input type="text" name="color" value="" placeholder="e.g rosu, verde, gri, etc." class="inp">
               <div class="type-of-logo">
                 <span>Alege logo preferat:</span>
-  <label>
+                <label>
      <input type="checkbox" name="" value=""/>
-     <img src="https://dummyimage.com/100/000/fff">
+      <img src="images/blana-order.png">
   </label>
 
-  <label>
+                <label>
     <input type="checkbox" name="" value=""/>
-     <img src="https://dummyimage.com/100/000/fff">
+       <img src="images/blana-order.png">
   </label>
 
-  <label>
+                <label>
     <input type="checkbox" name="" value=""/>
-      <img src="https://dummyimage.com/100/000/fff">
+        <img src="images/dpc-order.png">
   </label>
 
-  <label>
+                <label>
      <input type="checkbox" name="" value=""/>
-    <img src="https://dummyimage.com/100/000/fff">
+      <img src="images/cg-order.png">
   </label>
-    <label>
+                <label>
      <input type="checkbox" name="" value=""/>
-    <img src="https://dummyimage.com/100/000/fff">
+      <img src="images/etrad-order.png">
   </label>
-    <label>
+                <label>
      <input type="checkbox" name="" value=""/>
-    <img src="https://dummyimage.com/100/000/fff">
+    <img src="images/blana-order.png">
   </label>
 
-              </div>
-            </div>
-            </div>
-            <div class="row step-buttons">
-              <div class="col-md-6">
-              </div>
-              <div class="col-md-6 right">
-
-                <button type="submit" class="order-btn next-step" name="button">Finalizare</button>
               </div>
             </div>
           </div>
-        </form>
-      </div>
+          <div class="row step-buttons">
+            <div class="col-md-6">
+            </div>
+            <div class="col-md-6 right">
 
-
+              <button type="submit" class="order-btn next-step" name="button">Finalizare</button>
+            </div>
+          </div>
+        </div>
+      </form>
     </div>
-    <div class="footer-wrapper">
-      <div class="custom-container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="social-media">
-              <a href="">
+
+
+  </div>
+  <div class="footer-wrapper">
+    <div class="custom-container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="social-media">
+            <a href="">
                 <i class="fab fa-facebook-f"></i>
               </a>
-              <a href="">
+            <a href="">
                 <i class="fab fa-instagram"></i>
               </a>
-              <a href="">
+            <a href="">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="">
+            <a href="">
                 <i class="far fa-envelope"></i>
               </a>
-            </div>
           </div>
-          <div class="col-md-6 right">
-            &copy;
-            <script type="text/javascript">
-              document.write(new Date().getFullYear());
-            </script>
-            2B-studios. All Rights Reserved
-          </div>
-
+        </div>
+        <div class="col-md-6 right">
+          &copy;
+          <script type="text/javascript">
+            document.write(new Date().getFullYear());
+          </script>
+          2B-studios. All Rights Reserved
         </div>
 
       </div>
+
     </div>
+  </div>
 
 
 
-    <script src="js/wow.min.js"></script>
-    <script>
-      new WOW().init();
-    </script>
-  </body>
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
+</body>
 
-  </html>
+</html>
