--- a/website-order.html
+++ b/website-order.html
@@ -173,9 +173,9 @@
                    <h6>Numarul de pagini</h6>
                    <input type="text" name="name" value="" placeholder="" class="inp">
                    <div class="checkboxes">
-                     <h6>Host</h6>
-                     <input type="radio" name="name" > Da
-                     <input type="radio" name="name" > Nu
+                     <h6>Aveti nevoie de Host?</h6>
+                     <input type="radio" name="host" > Da
+                     <input type="radio" name="host" > Nu
                    </div>
                    <h6>Buget</h6>
                    <select name="" id="">
@@ -189,9 +189,9 @@
                  <h6>Website Actual</h6>
                  <input type="text" name="name" value="" placeholder="" class="inp">
                  <div class="checkboxes">
-                   <h6>Detineti logo?</h6>
-                   <input type="radio" name="name" > Da
-                   <input type="radio" name="name" > Nu
+                   <h6>Detineti logo al companiei?</h6>
+                   <input type="radio" name="logo" > Da
+                   <input type="radio" name="logo" > Nu
                  </div>
                  <h6>Termen</h6>
                  <select name="" id="">
