--- a/portfolio.html
+++ b/portfolio.html
@@ -171,7 +171,7 @@
         <div class="col-md-6 center">
           <span>Am nevoie de</span>
           <select id="order-input">
-                <option value="0" class="blue">Alege din lista.</option>
+                <option value="0" class="blue small-select">Alege din lista.</option>
                  <option value="/website-order.html" class="small-select blue">Website</option>
             <option value="/logo-order.html" class="small-select blue">Logo</option>
             <option value="/design-order.html" class="small-select blue">Design</option>
