--- a/index.html
+++ b/index.html
@@ -185,28 +185,29 @@
 
           <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
             <div class="img-wrapper">
-              <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
+              <img src="https://scontent.fomr1-1.fna.fbcdn.net/v/t31.0-8/25358548_10211329616338569_7917665667877435195_o.jpg?_nc_cat=0&oh=564785c8c805d1420ea77ab8e15d2b30&oe=5C31772F" alt="">
+
             </div>
             <div class="testimonial-info">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aliquam est cumque velit, quas voluptatem eos porro! Mollitia.
+              Am colaborat cu Gabi pentru un logo al liniei noastre de blana pentru decor. Ne-am dorit un logo simplu si catchy. Am avut cateva idei pe care Gabi le-a inclus foarte creativ in logo.ul final si suntem extrem de multumiti de produsul final si de comunicare, recomand cu toata increderea!
             </div>
             <div class="testimonial-name">
-              BY LEONARDI DI CAPRIO
-              <b>GOOGLE</b>
+              Ariana Tuțac
+              <b>BLÂNA</b>
             </div>
             <a href="" class="btn blue-btn">Vezi proiect</a>
           </div>
           <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
             <div class="img-wrapper">
-              <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
+              <img src="https://scontent.fomr1-1.fna.fbcdn.net/v/t31.0-8/25358548_10211329616338569_7917665667877435195_o.jpg?_nc_cat=0&oh=564785c8c805d1420ea77ab8e15d2b30&oe=5C31772F" alt="">
             </div>
 
             <div class="testimonial-info">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aliquam est cumque velit, quas voluptatem eos porro! Mollitia.
+            Am avut o experienta foarte buna cu un proiect precedent, astfel ca atunci cand am avut nevoie de un logo pentru lansarea primului magazin online de traduceri din Romania e-trad am stiut din start cu cine vreau sa lucrez. Apreciez la Gabi increderea pe care o da clientilor ca se afla pe maini bune, are multe idei, asculta clientul si se adapteaza nevoilor acestuia. Suntem foarte multumiti de logo si de colaborare!
             </div>
             <div class="testimonial-name">
-              BY Antonio Banderas
-              <b>APPLE</b>
+              Ariana Tuțac
+              <b>e-trad</b>
             </div>
             <a href="" class="btn blue-btn">Vezi proiect</a>
           </div>
