--- a/index.html
+++ b/index.html
@@ -244,12 +244,14 @@
 
         <div class="col-md-6 center">
           <span>Am nevoie de</span>
+          <div class="select-wrapper">
           <select id="order-input">
             <option value="0" class="blue small-select">Alege din lista.</option>
             <option value="/website-order.html" class="small-select blue">Website</option>
             <option value="/logo-order.html" class="small-select blue">Logo</option>
             <option value="/design-order.html" class="small-select blue">Design</option>
           </select>
+        </div>
           <div>
             <input type="submit" class="btn" value="continua" onclick="getOrder()">
           </div>
