--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
           <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
             <div class="img-wrapper">
-              <img src="https://scontent.fomr1-1.fna.fbcdn.net/v/t31.0-8/25358548_10211329616338569_7917665667877435195_o.jpg?_nc_cat=0&oh=564785c8c805d1420ea77ab8e15d2b30&oe=5C31772F" alt="">
+              <img src="images/ariana.jpg" alt="">
 
             </div>
             <div class="testimonial-info">
@@ -199,7 +199,7 @@
           </div>
           <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
             <div class="img-wrapper">
-              <img src="https://scontent.fomr1-1.fna.fbcdn.net/v/t31.0-8/25358548_10211329616338569_7917665667877435195_o.jpg?_nc_cat=0&oh=564785c8c805d1420ea77ab8e15d2b30&oe=5C31772F" alt="">
+              <img src="images/ariana.jpg" alt="">
             </div>
 
             <div class="testimonial-info">
