--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
     <div id="our-projects">
       <ul class="projects-menu simplefilter">
         <li class="active-btn" data-filter="all">Toate</li>
-        <li data-filter="webdesign">Web Design</li>
+        <li data-filter="web">Web Design</li>
         <li data-filter="logo">Logo Design</li>
         <li data-filter="bc">Carți de vizită.</li>
         <li data-filter="diverse">Diverse</li>
@@ -127,6 +127,14 @@
         </div>
       </div>
 
+      <div class="project filtr-item" data-category="web">
+        <img src="images/2bwebsite.jpg" alt="">
+        <div class="open-project">
+          <span>DPC - Drum Proiect Consult</span>
+          <a href=""><i class="fas fa-share"></i></a>
+        </div>
+      </div>
+
       <div class="project filtr-item" data-category="logo">
         <img src="images/blanalogo.jpg" alt="">
         <div class="open-project">
@@ -135,7 +143,14 @@
         </div>
       </div>
 
-
+      <div class="project filtr-item" data-category="web">
+        <img src="images/nfs-web.jpg" alt="">
+        <div class="open-project">
+          <span>DPC - Drum Proiect Consult</span>
+          <a href=""><i class="fas fa-share"></i></a>
+        </div>
+      </div>
+      
       <div class="project filtr-item" data-category="logo">
         <img src="images/etradlogo.jpg" alt="">
         <div class="open-project">
@@ -143,6 +158,8 @@
           <a href=""><i class="fas fa-share"></i></a>
         </div>
       </div>
+
+
 
       <div class="project filtr-item" data-category="logo">
         <img src="images/aripaulogo.jpg" alt="">
