Optimized IMG + Button Links + Change logo Design

--- a/order.html
+++ b/order.html
@@ -63,7 +63,7 @@
                       <a href="portfolio.html">Portofoliu</a>
                     </li>
                     <li class="">
-                      <a href="#contact-us">Contact</a>
+                      <a href="index.html#contact-us">Contact</a>
                     </li>
                     <li>
                       <a class="special-btn" href="order.html">Comanda</a>
