--- a/portfolio.html
+++ b/portfolio.html
@@ -96,6 +96,7 @@
     </div>
   </div>
   <div id="anchor"></div>
+
   <div class="center">
     <div id="our-projects">
       <ul class="projects-menu simplefilter">
@@ -112,7 +113,7 @@
 
 
       <div class="project filtr-item" data-category="logo">
-        <img src="images/dpclogo.jpg" alt="">
+        <img src="images/portofoliu/dpclogo.jpg" alt="">
         <div class="open-project">
           <span>DPC - Drum Proiect Consult</span>
           <a href=""><i class="fas fa-share"></i></a>
@@ -120,7 +121,7 @@
       </div>
 
       <div class="project filtr-item" data-category="bc">
-        <img src="images/dpcbc.jpg" alt="">
+        <img src="images/portofoliu/dpcbc.jpg" alt="">
         <div class="open-project">
           <span>DPC - Drum Proiect Consult</span>
           <a href=""><i class="fas fa-share"></i></a>
@@ -128,7 +129,7 @@
       </div>
 
       <div class="project filtr-item" data-category="web">
-        <img src="images/2bwebsite.jpg" alt="">
+        <img src="images/portofoliu/2bwebsite.jpg" alt="">
         <div class="open-project">
           <span>DPC - Drum Proiect Consult</span>
           <a href=""><i class="fas fa-share"></i></a>
@@ -136,23 +137,32 @@
       </div>
 
       <div class="project filtr-item" data-category="logo">
-        <img src="images/blanalogo.jpg" alt="">
+        <img src="images/portofoliu/blanalogo.jpg" alt="">
         <div class="open-project">
           <span>BLÂNA - Blană Decor</span>
           <a href=""><i class="fas fa-share"></i></a>
         </div>
       </div>
 
+
+            <div class="project filtr-item" data-category="bc">
+              <img src="images/portofoliu/bcbociu.jpg" alt="">
+              <div class="open-project">
+                <span>DPC - Drum Proiect Consult</span>
+                <a href=""><i class="fas fa-share"></i></a>
+              </div>
+            </div>
+
       <div class="project filtr-item" data-category="web">
-        <img src="images/nfs-web.jpg" alt="">
+        <img src="images/portofoliu/nfs-web.jpg" alt="">
         <div class="open-project">
           <span>DPC - Drum Proiect Consult</span>
           <a href=""><i class="fas fa-share"></i></a>
         </div>
       </div>
-      
+
       <div class="project filtr-item" data-category="logo">
-        <img src="images/etradlogo.jpg" alt="">
+        <img src="images/portofoliu/etradlogo.jpg" alt="">
         <div class="open-project">
           <span>E-TRAD </span>
           <a href=""><i class="fas fa-share"></i></a>
@@ -162,9 +172,17 @@
 
 
       <div class="project filtr-item" data-category="logo">
-        <img src="images/aripaulogo.jpg" alt="">
+        <img src="images/portofoliu/aripaulogo.jpg" alt="">
         <div class="open-project">
           <span>Ari&Pau Sports</span>
+          <a href=""><i class="fas fa-share"></i></a>
+        </div>
+      </div>
+
+      <div class="project filtr-item" data-category="diverse">
+        <img src="images/portofoliu/dpclogo.jpg" alt="">
+        <div class="open-project">
+          <span>DPC - Drum Proiect Consult</span>
           <a href=""><i class="fas fa-share"></i></a>
         </div>
       </div>
