--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="#contact-us">Contact</a>
                       </li>
                       <li>
-                        <a class="special-btn" href="order.html">Comanda</a>
+                        <a class="special-btn" href="order.html">Comandă</a>
                       </li>
                     </ul>
                   </div>
@@ -85,7 +85,7 @@
                 <b class="type-wrap"></b>
               </h2>
               <p><b>2B-studios</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis mollitia esse error consequatur tempore similique eos odit dignissimos atque voluptatem deserunt iure optio id, illo libero facilis neque labore excepturi!</p>
-              <a href="" class="btn">COMANDA ACUM!</a>
+              <a href="order.html" class="btn">COMANDA ACUM!</a>
             </div>
           </div>
         </div>
@@ -102,19 +102,19 @@
         <div class="custom-container">
           <div class="row">
             <div class="col-sm-3">
-              <i class="fas fa-desktop"></i>
+              <a href="portfolio.html#anchor"><i class="fas fa-desktop"></i></a>
               <p>Website</p>
             </div>
             <div class="col-sm-3">
-              <i class="fab fa-adn"></i>
+              <a href="portfolio.html#anchor"><i class="fab fa-adn"></i></a>
               <p>Logo Design</p>
             </div>
             <div class="col-sm-3">
-              <i class="far fa-address-card"></i>
+              <a href="portfolio.html#anchor"><i class="far fa-address-card"></i></a>
               <p>Carti de vizita</p>
             </div>
             <div class="col-sm-3">
-              <i class="fas fa-pencil-alt"></i>
+              <a href="portfolio.html#anchor"><i class="fas fa-pencil-alt"></i></a>
               <p>Alte designuri</p>
             </div>
           </div>
@@ -179,7 +179,7 @@
 <div class="gray-bg">
   <div class="custom-container pad">
     <div class="testimonials_title">
-      Testimonials
+      Ce spun clienții noștri?
     </div>
     <div class="testimonials-wrapper">
 
@@ -244,7 +244,7 @@
 
         <div class="col-md-6 center">
           <span>Am nevoie de</span>
-         
+
          <div class="select-wrapper">
    <select id="order-input">
             <option value="0" class="blue small-select">Alege din lista.</option>
@@ -254,7 +254,7 @@
           </select>
 </div>
 
-       
+
           <div>
             <input type="submit" class="btn" value="continua" onclick="getOrder()">
           </div>
@@ -335,5 +335,3 @@
   </body>
 
   </html>
-
-
