--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <script src="js/script.js"></script>
     <script src="js/smooth-scroll.js"></script>
     <script src="js/bootstrap.main.js"></script>
+     <script src="js/jquery.flexslider-min.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/default.css" rel="stylesheet">
+      <link href="css/flexslider.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
@@ -183,7 +185,10 @@
     </div>
     <div class="testimonials-wrapper">
 
-          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
+      <div class="testimonials-slider">
+        <ul class="slides">
+          <li>
+            <div class="testimonial-wrap" >
             <div class="img-wrapper">
               <img src="images/ariana.jpg" alt="">
 
@@ -197,7 +202,7 @@
             </div>
             <a href="" class="btn blue-btn">Vezi proiect</a>
           </div>
-          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
+          <div class="testimonial-wrap">
             <div class="img-wrapper">
               <img src="images/ariana.jpg" alt="">
             </div>
@@ -211,7 +216,7 @@
             </div>
             <a href="" class="btn blue-btn">Vezi proiect</a>
           </div>
-          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1.5s">
+          <div class="testimonial-wrap">
             <div class="img-wrapper">
               <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
             </div>
@@ -225,7 +230,100 @@
             </div>
             <a href="" class="btn blue-btn">Vezi proiect</a>
           </div>
+          </li>
+          <li>
+            <div class="testimonial-wrap">
+            <div class="img-wrapper">
+              <img src="images/ariana.jpg" alt="">
+
+            </div>
+            <div class="testimonial-info">
+             test
+            </div>
+            <div class="testimonial-name">
+              Ariana Tuțac
+              <b>BLÂNA</b>
+            </div>
+            <a href="" class="btn blue-btn">Vezi proiect</a>
+          </div>
+          <div class="testimonial-wrap">
+            <div class="img-wrapper">
+              <img src="images/ariana.jpg" alt="">
+            </div>
+
+            <div class="testimonial-info">
+           test
+            <div class="testimonial-name">
+              Ariana Tuțac
+              <b>e-trad</b>
+            </div>
+            <a href="" class="btn blue-btn">Vezi proiect</a>
+          </div>
         </div>
+          <div class="testimonial-wrap" >
+            <div class="img-wrapper">
+              <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
+            </div>
+            <div class="testimonial-info">
+             test
+            </div>
+            <div class="testimonial-name">
+              BY KIM
+              <b>FACEBOOK</b>
+
+            </div>
+            <a href="" class="btn blue-btn">Vezi proiect</a>
+          </div>
+          </li>
+            <li>
+            <div class="testimonial-wrap">
+            <div class="img-wrapper">
+              <img src="images/ariana.jpg" alt="">
+
+            </div>
+            <div class="testimonial-info">
+              das
+            </div>
+            <div class="testimonial-name">
+              Ariana Tuțac
+              <b>BLÂNA</b>
+            </div>
+            <a href="" class="btn blue-btn">Vezi proiect</a>
+          </div>
+          <div class="testimonial-wrap">
+            <div class="img-wrapper">
+              <img src="images/ariana.jpg" alt="">
+            </div>
+
+            <div class="testimonial-info">
+           dsasad
+            </div>
+            <div class="testimonial-name">
+              Ariana Tuțac
+              <b>e-trad</b>
+            </div>
+            <a href="" class="btn blue-btn">Vezi proiect</a>
+          </div>
+          <div class="testimonial-wrap" data-wow-duration="1s" data-wow-delay="1.5s">
+            <div class="img-wrapper">
+              <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
+            </div>
+            <div class="testimonial-info">
+              adsads
+            </div>
+            <div class="testimonial-name">
+              BY KIM
+              <b>FACEBOOK</b>
+
+            </div>
+            <a href="" class="btn blue-btn">Vezi proiect</a>
+          </div>
+          </li>
+        </ul>
+      </div>
+          
+        </div>
+   
   </div>
 </div>
     <div class="order-section">
