--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,12 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/typed.js"></script>
+    <script src="js/jquery.filterizr.min.js"></script>
+    <script src="js/bootstrap.main.js"></script>
     <script src="js/script.js"></script>
     <script src="js/smooth-scroll.js"></script>
-    <script src="js/bootstrap.main.js"></script>
-    <!-- <script src="js/jquery.filterizr.min.js"></script> -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/filterizr/1.3.5/jquery.filterizr.min.js"></script>
+    
+
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -98,7 +99,7 @@
         </div>
       </div>
       <div id="anchor"></div>
-
+<span class="center" style="font-size: 30px; color: red; display: block;">BOGI</span>
       <div id="our-projects" class="center">
         <ul class="projects-menu simplefilter">
           <li class="active-btn" data-filter="all">Toate</li>
